# house-price-prediction

./: .gitignore  README.md  pyproject.toml  train.py
src/api/: Dockerfile  README.md
src/features/: __init__.py  data_featuring.py
src/frontend/: Dockerfile  README.md
src/processing/: __init__.py  data_processing.py  transforms.py
src/training/: __init__.py  train_model.py
