[project]
name = "house-price-prediction"
version = "0.1.0"
description = "Production-ready ML system for house price prediction using XGBoost, featuring FastAPI REST API, Streamlit UI, MLflow tracking, and Docker deployment. Achieves 92.1% R² on Ames Housing dataset with 18+ engineered features."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.1.0",
    "catboost>=1.2.10",
    "fastapi>=0.129.2",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.10.0",
    "numpy>=2.4.2",
    "optuna>=4.7.0",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "setuptools>=82.0.0",
    "streamlit>=1.54.0",
    "uvicorn>=0.41.0",
    "xgboost>=3.2.0",
]
